--- a/src/main/webapp/pages/credit/orderallocationrule/orderrule_list.html
+++ b/src/main/webapp/pages/credit/orderallocationrule/orderrule_list.html
@@ -68,9 +68,9 @@ var paginator = function(page) {
 		<button type="button" class="btn btn-default" onclick="resetForm();">
 		 		<span class="glyphicon glyphicon-refresh"></span> 重 置
 		</button>
-		<button type="button" class="btn btn-default" onclick="oper.add();">
+		<!-- <button type="button" class="btn btn-default" onclick="oper.add();">
 		 		<span class="glyphicon glyphicon-plus"></span> 新 增
-		</button>	
+		</button>	 -->
 	</div>
 <!-- 数据列表 -->
 	<table class="table table-striped table-bordered table-hover">
@@ -102,7 +102,7 @@ var paginator = function(page) {
 				<td>
 					<a href="javascript:void(0);" class="btn btn-sm btn-success"  onclick="oper.view(${item.order_allocation_id});">查看</a> 
 					<a href="javascript:void(0);" class="btn btn-sm btn-primary"  onclick="oper.edit(${item.order_allocation_id});">修改</a> 
-					<a href="javascript:void(0);" class="btn btn-sm btn-danger"  onclick="oper.del(${item.order_allocation_id});">删除</a></td>
+					<!-- <a href="javascript:void(0);" class="btn btn-sm btn-danger"  onclick="oper.del(${item.order_allocation_id});">删除</a> --></td>
 				</td>
 			</tr>
 		<% } %>
