样式修改该  全部订单 跳转问题

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -309,7 +309,7 @@
                         <div class="input-group col-md-12 align-items-top">
                             <label class="control-label">撤销原因：</label>
                             <!--<input type="text" class="form-control">-->
-                            <textarea name="" id="revoke_reason" cols="50" rows="10"></textarea>
+                            <textarea name="" id="revoke_reason" cols="50" rows="10" style="border-color: rgb(221,221,221);border-radius: 4px;width: 74rem"></textarea>
                         </div>
 
 
