--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
@@ -239,13 +239,13 @@
 	                                </div>
 	                            </div>
 	                            <div class="row mt-4 mb-4 pl-4">
-	                                <div class="input-group col-md-6 align-items-center">
+	                                <div class="input-group col-md-12 align-items-center">
 	                                    <label class="control-label">地址：</label>
-	                                    <textarea name="model.address" id="address" type="text" class="form-control" style="height:5rem"></textarea>
+	                                    <textarea name="model.address" id="address" type="text" class="form-control" style="height: 2.5rem;overflow: hidden;resize: none;"></textarea>
 	                                </div>
-	                                <div class="input-group col-md-6 align-items-center">
+	                                <div class="input-group col-md-12 align-items-center" style="margin-top: 1.5rem">
 	                                    <label class="control-label">备注：</label>
-	                                    <textarea name="model.remarks" id="remarks" type="text" class="form-control" style="height:5rem"></textarea>
+	                                    <textarea name="model.remarks" id="remarks" type="text" class="form-control" style="height: 2.5rem;overflow: hidden;resize: none;"></textarea>
 	                                </div>
 	                            </div>
                         <label class="mt-3 ml-3">上传附件：</label>
