--- a/src/main/webapp/pages/credit/notice/createMsg.html
+++ b/src/main/webapp/pages/credit/notice/createMsg.html
@@ -15,7 +15,7 @@
             padding-top: 3rem;
         }
         #msg_title{
-            max-width: 40rem;
+            /*max-width: 40rem;*/
         }
         form.form-inline label{
             justify-content: flex-end;
@@ -57,11 +57,11 @@
                 <form class="form-inline" action="">
                     <div class="input-group col-12 mt-2">
                         <label class="control-label col-md-2" for="msg_title">公告标题：</label>
-                        <input class="form-control col-md-10 formInput ml-3" id="msg_title" name="msg_title">
+                        <input class="form-control col-md-8 formInput ml-3" id="msg_title" name="msg_title">
                     </div>
                     <div class="input-group col-12 mt-2">
                         <label class="control-label col-md-2" for="msg_content">公告内容：</label>
-                        <div class="form-control col-md-8 formInput border-0" id="msg_content"></div>
+                        <div class="form-control col-md-8 formInput ml-3 border-0" id="msg_content" style="padding-left: 0;padding-right: 0"></div>
                     </div>
                     <div class="input-group mt-2 d-block text-center w-100">
                         <input type="submit" class="btn btn-primary" value="确认发布">
