--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -253,7 +253,7 @@
 
                  <form class="tableValue" action="/credit/front/orderProcess/statusSaveWithFileUpLoad" class="form-inline " enctype="multipart/form-data" method="post">
 
-                    <div class="file-upload pl-5">
+                    <div class="file-upload" style="padding-left: 0">
                         <label class="mt-3 ml-3">上传附件：</label>
                         <div class="uploadFile mt-3 mr-4">
                             <input type="file" name="Files_1" id="upload_file" value="" class="file-input" />
