--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -243,7 +243,8 @@
                             </div>
                     </div>
                  <form class="tableValue" action="/credit/front/orderProcess/statusSaveWithFileUpLoad" class="form-inline " enctype="multipart/form-data" method="post">
-                    <div>
+                    <div class="file-upload" style="padding-left: 0">
+                        <label class="mt-3 ml-3">上传附件：</label>
                         <div class="uploadFile mt-3 mr-4">
                             <input type="file" name="Files_1" id="upload_file" value="" class="file-input" />
                             <div class="over-box"> 
@@ -341,13 +342,13 @@
                         <div class="file-upload">
                             <div class="row mt-3 mb-2">
                                 <div class="input-group col-md-6 align-items-center">
-                                    <label class="control-label col-md-4 text-right">代理ID：</label>
+                                    <label class="control-label text-right">代理ID：</label>
                                     <select name="" id="agency_id" class="form-control  col-md-6" >
                                        <option value="-1">请选择</option>
                                     </select>
                                 </div>
                                 <div class="input-group col-md-6 align-items-center mt-3">
-                                    <label class="control-label col-md-4 text-right">代理类别：</label>
+                                    <label class="control-label text-right">代理类别：</label>
                                     <select name="attr.agentcategory" id="agent_category" valid="vselect" validname="代理类别" class="form-control  col-md-6">
                                         <option value="-1">请选择</option>
                                     </select>
