--- a/src/main/webapp/pages/credit/usercenter/total_manage/total_settle.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/total_settle.html
@@ -77,8 +77,9 @@
                                    <% } %>
                                 </select>
                             </div>
-                            <div class="input-group mt-0 col-md-4 pl-0 pr-2">
-                                <label class="control-label col-md-3 px-0" for="time">时间：</label>
+                            <div class="input-group mt-0 col-md-4 pl-0 pr-2" style="position: relative;display: flex;align-items: center">
+                                <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 1.75rem;width: 16px;height: 18px;">
+                                <label class="control-label px-0" for="time">时间：</label>
                                 <input type="text" autocomplete="false" class="layui-input search-input" id="time" name="time" placeholder="请选择日期范围">
                             </div>
                         </div>
