添加时间图标

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -52,9 +52,10 @@
                                 <label class="control-label col-md-4" for="txt_search_companyEngName">订单公司名称：</label>
                                 <input type="text" class="form-control search-input col-md-8" id="txt_search_companyEngName" placeholder="请输入订单公司名称">
                             </div>
-                            <div class="input-group mt-2 col-md-4">
+                            <div class="input-group mt-2 col-md-4" style="position: relative;display: flex;align-items: center">
+                                <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 1.75rem;width: 16px;height: 18px;z-index: 99">
                                 <label class="control-label col-md-4" for="txt_search_date">到期日期：</label>
-                                <input type="text" class="form-control search-input col-md-8" id="txt_search_date" placeholder="请选择到期日期"">
+                                <input type="text" class="form-control search-input col-md-8" id="txt_search_date" placeholder="请选择到期日期">
                             </div>
                         </div>
                         <div id="btnCollapse" style="width:100%">
