--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -25,7 +25,7 @@
                 <!-- 个人信息 -->
                 <div class="user-order d-flex justify-content-between align-items-center">
                     <div class="user-info d-flex flex-column justify-content-center">
-                        <p class="regards">您好，<span id="name">w</span>，祝你开心每一天！</p>
+                        <p class="regards">您好，<span id="name"></span>，祝你开心每一天！</p>
                         <p class="job-title mt-2">                            
                             <span id="role"></span>
                              <span id="company"></span>
@@ -63,9 +63,10 @@
                                         <label class="control-label col-md-4" for="txt_search_companyEngName">订单公司名称：</label>
                                         <input type="text" class="form-control search-input col-md-8" id="txt_search_companyEngName" placeholder="请输入订单公司名称">
                                     </div>
-                                    <div class="input-group mt-2 col-md-4">
+                                    <div class="input-group mt-2 col-md-4" style="position: relative;display: flex;align-items: center">
+                                        <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 28px;width: 16px;height: 18px;z-index: 99">
                                         <label class="control-label col-md-4" for="txt_search_statu">到期日期：</label>
-                                        <input id="dead_date" type="text" class="form-control search-input col-md-8"  placeholder="请选择到期日期"">
+                                        <input id="dead_date" type="text" class="form-control search-input col-md-8"  placeholder="请选择到期日期">
                                     </div>
                                 </div>
                                 <div id="btnCollapse" style="width:100%">
