--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
@@ -85,17 +85,17 @@
     <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
-          <th name="t.id" class="sorting">父节点ID</t>
+            <th name="t.id" class="sorting">父节点ID</t>
             <th name="d.small_module_type_name" class="sorting">父节点类型</t>
             <th name="t.temp_name" class="sorting">父节点名称</th>
-               <th name="t.float_parent" class="sorting">浮动父节点ID</th>
-            <th name="s.detail_name " class="sorting">word模板方向</th>
+            <th name="t.float_parent" class="sorting">浮动父节点ID</th>
+            <th name="s.detail_name " class="sorting">占位符(word模板)</th>
+            <th name="s.detail_name " class="sorting">表格样式(word模板)</th>
             <th name="t.anchor_id" class="sorting">对应锚点的ID</th>
-             <th name="e.detail_name" class="sorting">是否和下一个模板合并</th>
+            <th name="e.detail_name" class="sorting">合并下个节点</th>
             <th name="t.place_hold" class="sorting">输入提示</th>
             <th name="t.sort" class="sorting">排序</th>
-             <th name="t.remark" class="sorting">备注</th>
-           
+            <th name="t.remark" class="sorting">备注</th>
             <th>操作</th>
         </tr>
         </thead>
@@ -130,6 +130,13 @@
                     ${strutil.subStringTo(item.float_parent, 0, 25)}...
                 <% } else { %>
                     ${item.float_parent}
+                <% } %>
+            </td>
+            <td title="${item.word_key!}">
+                <% if (strutil.length(item.word_key) >25) { %>
+                ${strutil.subStringTo(item.word_key, 0, 25)}...
+                <% } else { %>
+                ${item.word_key}
                 <% } %>
             </td>
             <td title="${item.wordTableTypeName!}">
@@ -177,7 +184,7 @@
             </td>
 
             <td>
-                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.table_id});">配置</a>
+                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.table_id});">配置字段</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">修改</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-danger" onclick="oper.del(${item.id});">删除</a>
             </td>
