--- a/src/main/webapp/pages/credit/reportType/reportType_list.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_list.html
@@ -156,7 +156,7 @@
 					
 				<td title="${item.create_date!}">${item.create_date,dateFormat="yyyy-MM-dd HH:mm:ss"}</td>	
 		<td><a href="javascript:void(0);" class="btn btn-sm btn-success"
-			onclick="oper.view(${item.id});">配置</a> <a href="javascript:void(0);"
+			onclick="oper.view(${item.id});">配置节点</a> <a href="javascript:void(0);"
 			class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">编辑</a>
 			<a href="javascript:void(0);" class="btn btn-sm btn-primary"
 			onclick="oper.down(${item.id});">下载模板</a>
