详情页部分样式问题，表格+饼图或组合图部分的结构重写，没数据时展示测试数据

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -39,6 +39,14 @@
         table{
             word-break: break-all;
         }
+        table.table thead th{
+            min-width: 11rem;
+            border-top: none;
+            border-bottom: none;
+        }
+        table.table tbody tr:first-child td{
+            border-top: none;
+        }
         .return_back{
             color: #A5A5A5;
             font-size: 14px;
@@ -47,6 +55,12 @@
         .return_back:hover{color: #A5A5A5}
         .return_back img{display: inline-block;vertical-align: top}
         .return_back span{padding-left: 8px;}
+
+        .multiText {
+            min-height: 3rem;
+            border-radius: 4px;
+        }
+
     </style>
 </head>
 <body>
