--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -15,6 +15,10 @@
         }
         .select2Box label {
             padding-left: 2rem;
+
+        }
+        .select2Box div.col-11{
+            padding-left: 0;
         }
         .select2-container .select2-selection--multiple,
         .select2-container--default.select2-container--focus .select2-selection--multiple{
@@ -40,7 +44,7 @@
             word-break: break-all;
         }
         table.table thead th{
-            min-width: 11rem;
+            /*min-width: 11rem;*/
             border-top: none;
             border-bottom: none;
         }
