--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate.html
@@ -49,7 +49,7 @@
         <div class="main-content">
 
         </div> 
-        
+        <div class="triggerModal" data-toggle="modal" data-target="#modal_revise" style="visibility:hidden"></div>
          <!-- fixed 底部 -->
                     <div class="position-fixed fixed-btn-well d-flex justify-content-end align-items-center px-5">
                        
@@ -57,21 +57,51 @@
     </div>
 </div>
 <div class="modal fade" id="modal_delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-				<div class="modal-dialog modal-dialog-centered" role="document">
-					        <div class="modal-content">
-					            <div class="modal-header">
-					              	确认删除？
-					            </div>
-					              <div class="modal-body">
-					               	<div class="d-flex justify-content-center align-items-center"><img src="${BASE_PATH }static/credit/imgs/index/info.png" style="width:1.8rem;margin-right:.2rem"/>是否要删除此行？</div>
-					            </div>
-					            <div class="modal-footer">
-					                <button type="button" class="btn btn-primary" id="popEnter" data-dismiss="modal">删除</button>
-					                <button type="button" class="btn btn-default" id="popCancel" data-dismiss="modal">取消</button>
-					            </div>
-					        </div>
-					    </div>
-					</div>
+	<div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+              	确认删除？
+            </div>
+              <div class="modal-body">
+               	<div class="d-flex justify-content-center align-items-center"><img src="${BASE_PATH }static/credit/imgs/index/info.png" style="width:1.8rem;margin-right:.2rem"/>是否要删除此行？</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="popEnter" data-dismiss="modal">删除</button>
+                <button type="button" class="btn btn-default" id="popCancel" data-dismiss="modal">取消</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- 翻译校正模态窗 -->
+<div class="modal fade" id="modal_revise" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            	<span class="headtxt"></span>
+           		 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="align-items:center">
+               	<div class="form-group my-3">
+               		<label class="control-label mb-1">错误的英文</label>
+               		<input type="text" class="form-control wrongEn">
+               	</div>
+               	<div class="form-group my-3">
+               		<label class="control-label mb-1">正确的英文</label>
+               		<input type="text" class="form-control correctEn">
+               	</div>
+               	<div class="form-group my-3">
+               		<label class="control-label mb-1">正确的中文</label>
+               		<input type="text" class="form-control correctCh">
+               	</div>
+            </div>
+            <div class="modal-footer" style="justify-content:center">
+                <button type="button" class="btn btn-primary" id="submit_revise" data-dismiss="modal">提交</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="${BASE_PATH }static/credit/assets/city-select/Popt.js"></script>
  	<script src="${BASE_PATH }static/credit/assets/city-select/cityJson.js"></script>
  	<script src="${BASE_PATH }static/credit/assets/city-select/citySet.js"></script>
