日期图标修改

--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -64,7 +64,7 @@
                                         <input type="text" class="form-control search-input col-md-8" id="txt_search_companyEngName" placeholder="请输入订单公司名称">
                                     </div>
                                     <div class="input-group mt-2 col-md-4" style="position: relative;display: flex;align-items: center">
-                                        <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 28px;width: 16px;height: 18px;z-index: 99">
+                                        <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 1.8rem;width: 1rem;height: 1.125rem;z-index: 99">
                                         <label class="control-label col-md-4" for="txt_search_statu">到期日期：</label>
                                         <input id="dead_date" type="text" class="form-control search-input col-md-8"  placeholder="请选择到期日期">
                                     </div>
