--- a/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
@@ -70,7 +70,7 @@
                             <!--<input type="text" class="form-control search-input" id="txt_search_reporter" placeholder="请输入报告员">-->
                         </div>
                         <div class="input-group mt-0 col-md-4 pl-0" style="position: relative;display: flex;align-items: center">
-                            <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right:1.75rem;width: 16px;height: 18px;">
+                            <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 1.8rem;width: 1rem;height: 1.125rem;">
                             <label class="control-label  px-0" for="time">时间：</label>
                             <input type="text" autocomplete="false" class="layui-input search-input" id="time" placeholder="请选择日期范围">
                         </div>
