--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -58,7 +58,7 @@
 							<% if(item.style!=null&&item.icon==null) { %>
 					<li id="${item.urlkey}" role="presentation" class="hasChild">
 				    <a class="menu1"  href="#" role="button" >
-				    	<i class="${item.style}"></i>
+				    	<!--<i class="${item.style}"></i>-->
 				     	<span > ${item.name}</span>
 				    </a>
 				    <ul style="display: none;" role="menu">
@@ -68,11 +68,10 @@
 				<% } %>
 					</ul>
 		  		</li>
-		  		<%} if(item.icon!=null&&item.style==null){%>
+		  		<%} if(item.icon!=null){%>
 		  		<li id="${item.urlkey}" role="presentation" class="hasChild">
 				    <a class="menu1"  href="#" role="button" >
-				    	<img src="${BASE_PATH }${item.icon}" alt="" class="menu-icon">
-				     	<span > ${item.name}</span>
+				    	<img src="${BASE_PATH }${item.icon}" alt="" class="menu-icon"><span >${item.name}</span>
 				    </a>
 				    <ul style="display: none;" role="menu">
 				    		
@@ -88,7 +87,7 @@
 				<% if(item.class!=null&&item.icon==null){%>
 					<li class="" id="${item.urlkey}"><a class="menu1" href="${item.url}"><i class="${item.style}"></i>${item.name}</a></li>
 				<%}else{%>
-					<li id="${item.urlkey}"><a class="menu1" href="${item.url}"> <img src="${BASE_PATH }${item.icon}" alt="" class="menu-icon">${item.name}</a></li>
+					<li id="${item.urlkey}"><a class="menu1" href="${item.url}"> <img src="${BASE_PATH }${item.icon}" alt="" class="menu-icon"><span>${item.name}</span></a></li>
 				<%}%>
 			<% } %>
 		<% } %>
