--- a/src/main/webapp/pages/credit/agentmanager/agent_edit.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_edit.html
@@ -79,11 +79,10 @@ var bodyContent = {
 		
 		<tr>
 			<td>代理编码</td>
-			<td> <input type="text" name="model.agent_id" class="form-control"  valid="vtext" validname="代理编码" style="width: 200px;"
-				value="${model.agent_id}"/> 
+			<td> <input class="form-control" type="text"   name="model.agent_id" value="${model.agent_id}" valid="vtext" validname="代理编码"/> 
 			</td>
 			<td>代理名称</td>
-			<td><input type="text" name="model.agent_name"  style="width: 200px;" class="form-control"  valid="vtext" validname="代理名称"
+			<td><input type="text" name="model.agent_name"  style="width: 200px;" class="form-control"  
 				value="${model.agent_name}" />
 			</td>
 			
