--- a/src/main/webapp/pages/credit/currencyrate/currencyrate_edit.html
+++ b/src/main/webapp/pages/credit/currencyrate/currencyrate_edit.html
@@ -81,7 +81,7 @@ var bodyContent = {
 				<tr>
 					<td>汇率</td>
 					<td>
-					<input class="form-control" type="text" name="model.rate" value="${model.rate}" valid="vtext" validname="目标币种"/>
+					<input class="form-control" type="text" name="model.rate" value="${model.rate}" valid="vtext" validname="汇率"/>
 					</td>
 				
 				</tr>
