添加字段bug修复

--- a/src/main/webapp/pages/credit/reportColumn/column_add.html
+++ b/src/main/webapp/pages/credit/reportColumn/column_add.html
@@ -34,7 +34,8 @@ var bodyContent = {
 %>
 <form name="form1" action="" method="post" class="form-horizontal"
       role="form" >
-    <input type="hidden" name="pid" value="${pid}" />
+    <input type="hidden" name="id" value="${id}" />
+    <input type="hidden" name="tid" value="${tid}" />
     <table class="table">
         <thead>
         <tr>
