--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
@@ -38,9 +38,9 @@
                 });
 
             },
-            peizhi : function(id) {
-            	alert(id)
-                var url = 'credit/reportColumn/list?pid='+id+"&reportType=${reportType!''}";
+            peizhi : function(id,tid) {
+            	//alert(id)
+                var url = 'credit/reportColumn/list?id='+id+'&tid='+tid+"&reportType=${reportType!''}";
                 var title = '查看详细父节点';
                 //Iframe(url, this.width, this.height, title, false, false, false, EmptyFunc);
                 window.location.href = url;
@@ -184,7 +184,7 @@
             </td>
 
             <td>
-                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.table_id});">配置字段</a>
+                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.id},${item.table_id});">配置字段</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">修改</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-danger" onclick="oper.del(${item.id});">删除</a>
             </td>
