type22表格+柱线组合图完成

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -64,7 +64,10 @@
             min-height: 3rem;
             border-radius: 4px;
         }
-
+        .type22-content .chartBox,
+        .type26-content .chartBox{
+            margin-top: 2rem;
+        }
     </style>
 </head>
 <body>
