添加字段bug修复

--- a/src/main/webapp/pages/credit/reportColumn/column_list.html
+++ b/src/main/webapp/pages/credit/reportColumn/column_list.html
@@ -29,7 +29,7 @@
                 Iframe(url, this.width, this.height, title);
             },
             del : function(id) {
-                var url = 'credit/reportColumn/del?id='+id;
+                var url = 'credit/reportColumn/del?sid='+id;
                 var title = '确认要删除该字段？';
                 Confirm(title, function() {
                     //window.location.href =  url;
