生成word报告问题修复

--- a/src/main/webapp/pages/credit/reportColumn/column_edit.html
+++ b/src/main/webapp/pages/credit/reportColumn/column_edit.html
@@ -33,7 +33,7 @@ var bodyContent = {
         <tr>
             <td>字段名称</td>
             <td>
-                <input class="form-control" type="text" name="model.temp_name" value="${model.temp_name }"  valid='vtext' validname='字段名称'  />
+                <input class="form-control" type="text" name="model.temp_name" value="${model.temp_name }"  validname='字段名称'  />
             </td>
         </tr>
         <tr>
