--- a/src/main/webapp/pages/credit/pricemanager/price_edit.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_edit.html
@@ -5,7 +5,6 @@
 <% var reportType = reportType.getReportTypeString(model.report_type!); %>
 <% var country = country.getCountryString(model.country_id !); %>
 <% var currency = tempDict.getSysDictDetailString('currency',model.currency!); %>
-model.currency
 <% 
 DIRECTIVE SAFE_OUTPUT_OPEN;
 var headContent = {
@@ -74,12 +73,12 @@ var bodyContent = {
 			<td>版本</td>
 			 <td>
 			 	<select  name="model.versions" class="form-control" >
-			 		<%if("标准版"==model.versions){%>
-			 			<option selected="selected" value="标准版">标准版</option>
+			 		<%if("新版"==model.versions){%>
+			 			<option selected="selected" value="标准版">新版</option>
 			 			<option  value="老系统">老系统</option>
 			 		<%}else{%>
 			 			<option selected="selected" value="老系统">老系统</option>
-			 			<option  value="标准版">标准版</option>
+			 			<option  value="新版">新版</option>
 			 		<%}%>
 			 	</select>
 			</td>	
@@ -115,12 +114,17 @@ var bodyContent = {
 			 </td>
 		</tr>
 		<tr>
-			<td>国家</td>
+			<td>国家或地区</td>
 			<td>
 				<select name="model.country_id" class="form-control" style="width: 200px;">
 							${country!}
 				</select>
 			 </td>
+		</tr>
+		<tr>
+			<td>客户ID</td>
+			<td><input type="text" name="model.customer_id" class="form-control" valid='vnum_y' 
+				value="${model.customer_id!}" /></td>
 		</tr>
 		<tr>
 			<td>报告点数</td>
