--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -57,7 +57,7 @@
             cursor: pointer;
         }
         .return_back:hover{color: #A5A5A5}
-        .return_back img{display: inline-block;vertical-align: top}
+        .return_back img{display: inline-block;vertical-align: middle;width: 14px;margin-top: -3px}
         .return_back span{padding-left: 8px;}
 
         .multiText {
