--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
@@ -50,7 +50,7 @@
             cursor: pointer;
         }
         .return_back:hover{color: #A5A5A5}
-        .return_back img{display: inline-block;vertical-align: top}
+        .return_back img{display: inline-block;vertical-align: middle;margin-top: -3px;width: 14px}
         .return_back span{padding-left: 8px}
     </style>
 </head>
