--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -614,8 +614,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                         </div>
                         <div class="form-group row d-flex justify-content-start mb-4">
                             <div class="input-group mt-2 col-md-12">
-                                <label class="control-label col-md-2" for="">备注：</label>
-                                <textarea name="attr.remarks"
+                                <label class="control-label col-md-2" for="">备注：</label><textarea name="attr.remarks"
                                           class="reste form-control search-input  col-md-10" name=""
                                           rows="4" cols="" placeholder="请输入其他细节" id="remakes"></textarea>
                             </div>
@@ -637,8 +636,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                         </div>
                         <div class="form-group row d-flex justify-content-start mb-4">
                             <div class="input-group mt-2 col-md-12">
-                                <label class="control-label col-md-2" for="">更新原因：</label>
-                                <textarea name="attr.update_reason"
+                                <label class="control-label col-md-2" for="">更新原因：</label><textarea name="attr.update_reason"
                                           class="reste form-control search-input  col-md-10" name=""
                                           rows="4" cols="" placeholder="请输更新原因"></textarea>
                             </div>
@@ -653,8 +651,9 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                                                                  value="0"> <input name="attr.company_by_report"
                                                                                    type="hidden" value=""> <input
                             name="attr.right_company_name_en" type="hidden" value="">
-                        <input name="attr." type="hidden" id="myId">
-                        <button lay-submit lay-filter="*" class="btn btn-primary" style="display:block;margin: 0 auto;">确认更新</button>
+                        <input name="attr.id" type="hidden" id="myId">
+                        <button type="button" id="btn_submit"
+                                class="btn btn-primary btn-submit" style="display: block;margin: 0 auto">确认更新</button>
                     </form>
 
                 </div>
@@ -674,15 +673,7 @@ $(function(){
 		getCustoms(data.customs);
 		getCountry(data.country);
 	})	;
-    layui.use('form', function(){
-        var form = layui.form;
-        form.on('submit(*)', function(data){
-            // console.log(data.elem) //被执行事件的元素DOM对象，一般为button对象
-            // console.log(data.form) //被执行提交的form对象，一般在存在form标签时才会返回
-            console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
-            // return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
-        });
-    });
+
 });
 function getCustoms(data){
 	console.log(data);
