--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
@@ -86,7 +86,7 @@
         <thead>
         <tr>
             <th name="t.id" class="sorting">父节点ID</t>
-            <th name="d.small_module_type_name" class="sorting">父节点类型</t>
+            <th name="d.detail_name" class="sorting">父节点类型</t>
             <th name="t.temp_name" class="sorting">父节点名称</th>
             <th name="t.float_parent" class="sorting">浮动父节点ID</th>
             <th name="s.detail_name " class="sorting">占位符(word模板)</th>
