质检样式，表单表格为null判断，商标路径

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -12,6 +12,9 @@
         h3.l-title{
             padding-left: 0;
         }
+        label{
+            font-weight: normal;
+        }
         .select2Box{
             display: flex;
             justify-content: space-between;
@@ -62,7 +65,7 @@
         table.table tbody tr:first-child td{
             border-top: none;
         }
-        table.table tbody tr:first-child td img{
+        table.table tbody tr td:nth-of-type(3) img{
             max-height: 3rem;
         }
         .return_back{
