--- a/src/main/webapp/pages/credit/pricemanager/price_add.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_add.html
@@ -1,5 +1,6 @@
 <% var orderspeed = tempDict.getSysDictDetailString('orderspeed',model.order_speed !); %>
 <% var ordertype = tempDict.getSysDictDetailString('ordertype',model.order_type !); %>
+<% var ordertype2 = tempDict.getSysDictDetailString('ordertype',model.order_type !); %>
 <% var countrytype = tempDict.getSysDictDetailString('country',model.country_type !); %>
 <% var usabled = tempDict.getSysDictDetailString('usabled',model.usabled !); %>
 <% var reportType = reportType.getReportTypeString(model.report_type!); %>
@@ -60,6 +61,8 @@ var oper = {
 			//重置其他客户的数据
 			$(".othersonly input").val("")
 			$(".othersonly select").val("")
+			$(".all select").val("");
+			$(".all").addClass("hide");
 			console.log($("select[name='model.order_speed']").find("option:selected").val())
 			console.log($("select[name='model.report_type']").find("option:selected").val())
 		}else if(value=="399"){
@@ -69,8 +72,11 @@ var oper = {
 			//重置其他客户的数据
 			$(".othersonly input").val("")
 			$(".othersonly select").val("")
+			$(".othernewsonly select").val("")
 			$(".only373 input").val("")
 			$(".only373 select").val("")
+			$(".all").addClass("hide");
+			$(".all select").val("");
 			console.log($("select[name='model.order_speed']").find("option:selected").val())
 			console.log($("select[name='model.report_type']").find("option:selected").val())
 			console.log($("select[name='model.ordernums_range_start']").find("option:selected").val())
@@ -79,6 +85,7 @@ var oper = {
 			//其他客户需要填写国家,报告类型,速度
 			$(".old").addClass("hide");
 			$(".others").removeClass("hide");
+			$(".all").removeClass("hide");
 			//重置其他客户的数据
 			$(".only373 input").val("")
 			$(".only373 select").val("")
@@ -204,7 +211,7 @@ var bodyContent = {
 			<td><input type="text" name="model.customer_id" class="form-control"  
 				value="${model.customer_id!}" /></td>
 	</tr>
-		<tr class="old others othersonly">
+	<tr class="all others othernewsonly">
 			<td>订单类型</td>
 			<td>  <select name="model.order_type" class="form-control" style="width: 200px;">
 						${ordertype!}
@@ -234,20 +241,15 @@ var bodyContent = {
 				</select>
 			</td>
 		</tr>
-		<tr  class="new">
+		<!-- <tr  class="new">
 			<td>报告类型</td>
 			 <td> 
 				 <select name="model.report_type" class="form-control" style="width: 200px;">
 							${reportType!}
 				</select> 
 			</td>
-		</tr>
-		<tr  class="new">
-			<td>订单类型</td>
-			<td>  <select name="model.order_type" class="form-control" style="width: 200px;">
-						${ordertype!}
-			</select> </td>
-		</tr>
+		</tr> -->
+		
 		<tr  class="new">
 			<td>国家或地区</td>
 			<td><select name="model.country_type" class="form-control" style="width: 200px;">
