--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -402,6 +402,7 @@ tempDict.getSysDictDetailString('agentcategory',''); %>
 
                         <input type="hidden" name="orderId" id="orderId23">
                         <input type="hidden" name="companyId2" id="companyId2">
+                        <input  name="statusCode" id="status2"  type="hidden" value="">
                     </div>
                 </div>
                 <div class="file-upload">
