--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -289,7 +289,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="order-detail mb-5">
-                        <div class="row mt-2 mb-2" id="div1"> 
+                        <div class="row mt-2 mb-2" id="div1">
                                 <div class="col-md-4">
                                     <span>客户ID：</span>
                                     <span id="custom_id2">**</span>
@@ -412,6 +412,7 @@
                 </div>
     </div>
 <!-- 批量分配 -->
+<!--确认订单-->
 
 <!-- 订单核实Modal -->
         <!--<div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">-->
