固定保存提交按钮

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -73,7 +73,7 @@
             font-size: 14px;
             cursor: pointer;
             position: fixed;
-            top: 4rem;
+            top: 4.2rem;
             left: 16.6%;
             padding-left: 20px;
             z-index: 99;
@@ -122,6 +122,9 @@
         </div>
         <!-- 内容展示 -->
         <div class="table-content">
+
+        </div>
+        <div class="position-fixed fixed-btn-well d-flex justify-content-end align-items-center px-5">
 
         </div>
     </div>
