--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -678,6 +678,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                             </div>
 
                         </div>
+                        <input name="attr.create_by" type="hidden" value="" id="createBy">
                         <input name="attr.status" type="hidden" value="0"> <input
                             name="id" type="hidden" value="0"> <input id="priceid"
                                                                       name="attr.price_id" type="hidden" value="0"> <input
